Fix: Issue-1912: changed spacing and removed uncessary line of code that was added by attempting to test the bug

--- a/public/resources/stylesheets/userbar.less
+++ b/public/resources/stylesheets/userbar.less
@@ -19,7 +19,6 @@
   width: 100%;
   height: 60px;
 
-
   .navbar-logo-container {
     margin-right: 5px;
     position: relative;
@@ -273,7 +272,6 @@
 /* Link for login section */
 a.navbar-login {
   color: white;
-  opacity: 1;
   text-decoration: none;
   font-weight: normal;
 }
